@@ -1,19 +1,26 @@
 package com.clinicmanagement.clinic.service;
 
 import com.clinicmanagement.clinic.Entities.Role;
-import com.clinicmanagement.clinic.Entities.Useracount;
+import com.clinicmanagement.clinic.Entities.UserRole;
+import com.clinicmanagement.clinic.Entities.Useraccount;
 import com.clinicmanagement.clinic.dto.ChangePasswordDTO;
-import com.clinicmanagement.clinic.dto.user.UserReponse;
 import com.clinicmanagement.clinic.dto.user.UserRequest;
+import com.clinicmanagement.clinic.dto.user.UserResponse;
+import com.clinicmanagement.clinic.enums.Roles;
 import com.clinicmanagement.clinic.exception.AppException;
 import com.clinicmanagement.clinic.exception.ErrorCode;
 import com.clinicmanagement.clinic.mapper.UserMapper;
+import com.clinicmanagement.clinic.repository.RoleRepository;
 import com.clinicmanagement.clinic.repository.UserRepository;
+import com.clinicmanagement.clinic.repository.UserRoleRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
@@ -21,6 +28,7 @@ import org.springframework.stereotype.Service;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -30,17 +38,30 @@ public class UserService{
     private UserRepository userRepo;
 
     @Autowired
+    private UserRoleRepository userRoleRepository;
+
+    @Autowired
+    private RoleRepository roleRepository;
+
+    @Autowired
     private UserMapper userMapper;
 
     @Autowired
     private PasswordEncoder passwordEncoder;
 
-    public List<UserReponse> getAllUsers() {
-        log.info("In method get users");
-        return userRepo.findAll().stream().map(userMapper::toUserReponse).toList();
+    public List<UserResponse> getAllUsers() {
+        List<Useraccount> users = userRepo.findAll();
+        return users.stream()
+                .map(userMapper::toUserReponse)
+                .collect(Collectors.toList());
     }
 
-    public UserReponse getByID(int id){
+
+    public Page<UserResponse> getAllUsers(Pageable pageable) {
+        return userRepo.findAll(pageable).map(userMapper::toUserReponse);
+    }
+
+    public UserResponse getByID(int id){
         return userMapper.toUserReponse(userRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found")));
     }
@@ -53,38 +74,63 @@ public class UserService{
 //        return userMapper.toUserReponse(user);
 //    }
 
-//    public Useracount createUser(UserRequest userRequest) {
-//        if(userRepo.existsByUsername(userRequest.getUsername()))
-//            throw new AppException(ErrorCode.USER_EXISTED);
-//        Useracount user = userMapper.toUser(userRequest);
-//        user.setPassword(passwordEncoder.encode(userRequest.getPassword()));
-//
-//        //Set role user khi dang ki thanh cong
-//        HashSet<Role> role = new HashSet<>();
-////        if(userRequest.getRole().str)
-//        user.setRoles(role);
-//
-//        return userRepo.save(user);
-//    }
+    public Useraccount createUser(UserRequest userRequest) {
+        if (userRepo.existsByUsername(userRequest.getUsername()))
+            throw new AppException(ErrorCode.USER_EXISTED);
+        Useraccount user = userMapper.toUser(userRequest);
+        user.setPassword(passwordEncoder.encode(userRequest.getPassword()));
+        try {
+            user = userRepo.save(user);
+            Role role = roleRepository.findByRoleName(Roles.USER.name());
+            UserRole userRole = userRoleRepository.save(UserRole.builder()
+                    .user(user)
+                    .role(role)
+                    .build());
+            return userRepo.save(user);
+        } catch (Exception ex) {
+            throw ex;
+        }
+    }
 
-//    public UserReponse updateUser(Integer id, UserUpdateRequest userUpdateRequest){
-//        Useracount user = userRepo.findById(id).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
-//        userMapper.updateUser(userUpdateRequest,user);
-//        return userMapper.toUserReponse(userRepo.save(user));
-//    }
-//
-    public Useracount getByName(String username) {
-        Optional<Useracount> optionalUser = userRepo.findByUsername(username);
+    public Useraccount getByEmail(String email) {
+        try{
+            return userRepo.findByPatient_Email(email);
+        } catch (Exception ex){
+            throw new IllegalArgumentException("Could not find any customer with the email " + email);
+        }
+    }
+
+
+    public Useraccount getByName(String username) {
+        Optional<Useraccount> optionalUser = userRepo.findByUsername(username);
         return optionalUser.orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
     }
 
+
+    public void updateResetPasswordToken(Useraccount useraccount, String token) {
+        useraccount.setResetPasswordToken(token);
+        userRepo.save(useraccount);
+    }
+
+    public void updatePassword(Useraccount customer, String newPassword) {
+        BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
+        String encodedPassword = passwordEncoder.encode(newPassword);
+        customer.setPassword(encodedPassword);
+
+        customer.setResetPasswordToken(null);
+        userRepo.save(customer);
+    }
+
+    public Optional<Useraccount> getByResetPasswordToken(String token) {
+        return userRepo.findByResetPasswordToken(token);
+    }
 
     //================================TOANLD===============================
     public void changePassword(ChangePasswordDTO changePasswordDTO) {
         var context = SecurityContextHolder.getContext();
         String username = context.getAuthentication().getName();
 
-        Useracount user = userRepo.findByUsername(username)
+        Useraccount user = userRepo.findByUsername(username)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
         System.out.println("Current Password from DTO: " + changePasswordDTO.getCurrentPassword());
